Include tmuxinator confs

--- a/tmux.conf
+++ b/tmux.conf
@@ -14,7 +14,7 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Split commands
-bind | split-window -h
+bind \ split-window -h
 bind - split-window -v
 unbind '"'
 unbind %
