--- a/tmux.conf
+++ b/tmux.conf
@@ -1,3 +1,12 @@
+################################### Setup ############################################################  
+
+# 0 is too far from ` ref: https://gist.github.com/spicycode/1229612
+set -g base-index 1
+
+# Set keys ref: https://gist.github.com/spicycode/1229612
+set -g status-keys vi
+setw -g mode-keys vi
+
 ################################### Keybindings ######################################################  
 
 # Set prefix
@@ -19,6 +28,16 @@ bind - split-window -v
 unbind '"'
 unbind %
 
+# VIM style pane resizing ref: https://gist.github.com/spicycode/1229612
+bind-key J resize-pane -D 5
+bind-key K resize-pane -U 5
+bind-key H resize-pane -L 5
+bind-key L resize-pane -R 5
+
+bind-key M-j resize-pane -D
+bind-key M-k resize-pane -U
+bind-key M-h resize-pane -L
+bind-key M-l resize-pane -R
 
 
 ################################### Visual changes ###################################################  
