Set tmux session name in term tab bar

--- a/tmux.conf
+++ b/tmux.conf
@@ -44,6 +44,10 @@ bind-key M-l resize-pane -R
 # ref: http://www.hamvocke.com/blog/a-guide-to-customizing-your-tmux-conf/#changing-the-look-of-tmux #
 ######################################################################################################
 
+# set session titles for iTerm tabs
+set-option -g set-titles on
+set-option -g set-titles-string "tmux::#{host}::#{session_name}"
+
 # panes
 set -g pane-border-fg black
 set -g pane-active-border-fg brightred
